# command-dispatcher

./: .gitignore  CMakeLists.txt
include/: command_dispatcher.hpp  packet.hpp  parameters.hpp  request_packet.hpp  response_packet.hpp  result.hpp
src/: main.cpp  request_packet.cpp
